[package]
name = "use_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rusqlite = "0.29.0"
thousands = "0.2.0"
uuid = { version = "1.3.1", features = ["v4"] }
